--- a/wheel/public/style/style.css
+++ b/wheel/public/style/style.css
@@ -93,11 +93,19 @@ img.hover-image{
 
 #wheel {
     display: block;
-    margin-right: -310px;
     text-align: center;
-    padding: 20px;
+    padding: 20px 0px;
+}
+
+#wheel > canvas {
+    flex-grow: 1;
+    flex-shrink: 1;
+    width: 100%;
+    max-width: 900px;
+    min-width: 450px;
 }
 
 #update {
+    padding: 20px 0px;
     max-width:100%;
 }
